# transactions_aiohttp

./: .env  .gitignore  Dockerfile  Readme.md  alembic.ini  docker-compose.yml  pyproject.toml  testtask.txt
alembic/: env.py
alembic/versions/: 955e9757d6b2_initial.py
app/: __main__.py  app.py  config.py
app/api/: __init__.py  routes.py
app/api/endpoints/: __init__.py  transactions.py  users.py
app/api/schemas/: __init__.py
app/cleanups/: __init__.py  database.py
app/models/: __init__.py  models.py
app/startups/: __init__.py  database.py
requirements/: base.txt
tests/: test_api.py
